# IntellijHosts

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.tsx  i18n.ts  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  hosts.rs  main.rs  utils.rs
src/components/: CurrentHosts.tsx  ProfilesView.tsx  SettingsView.tsx  Sidebar.tsx
src/locales/: de.json  en.json  fr.json  zh.json
